# Scripts

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql.yml
dsv_scripts/: __init__.py  __main__.py  commands.py  fileio.py  minify_json.py  remove_blank_lines.py  tinify_pngs.py  utils.py
