[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsv-scripts"
version = "0.0.1"
authors = [{ name = "The DSV Team" }]
description = "Various scripts to help manage the Diverse Stardew Valley mod."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D104"
