[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsv-scripts"
authors = [{ name = "The DSV Team" }]
description = "Various scripts to help manage the Diverse Stardew Valley mod."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    "rich >= 12.6.0",
]
dynamic = ["version"]

[project.scripts]
dsv-scripts = "dsv_scripts.__main__:main"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
classes = ["IO"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D417"]
match = 'dsv_scripts/.+\.py'

[tool.setuptools_scm]
local_scheme = "no-local-version"
