[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=7.0.0"]

[project]
authors = [{name = "The DSV Team"}]
description = "Various scripts to help manage the Diverse Stardew Valley mod."
dynamic = ["dependencies", "urls", "version"]
license = {text = "BSD-3-Clause"}
name = "dsv-scripts"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
target-version = ["py310"]

[tool.isort]
classes = ["IO"]
profile = "black"

[tool.pydocstyle]
add-ignore = ["D100", "D417"]
convention = "google"
match = 'dsv_scripts/.+\.py'

[tool.setuptools_scm]
local_scheme = "no-local-version"
